<resources>
    <string name="app_name" translatable="false">CyberManager</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="username_or_password_empty">Username or password are empty.</string>
    <string name="username_empty">Username is empty.</string>
    <string name="password_empty">Password is empty.</string>
    <string name="sample_text">im just a sample text :D</string>
    <string name="log_out">Log out</string>
    <string name="not_a_member">Not a member? </string>
    <string name="sign_up">Sign up</string>
    <string name="password_again">Confirm password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="passwords_dont_match">Passwords don\'t match.</string>
    <string name="passwordagain_empty">Please, confirm your password.</string>
    <string name="email" translatable="false">Email</string>
    <string name="email_empty">Email is empty.</string>
    <string name="account_created">The account was created</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="phno">Phone number</string>
    <string name="surname">Surname</string>
    <string name="address">Address line</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip code</string>
    <string name="data_set">Data was set successfully.</string>
    <string name="select_cafe">Select cafe</string>
    <string name="add_cafe">Add cafe</string>
    <string name="scan_code">Scan your code</string>
    <string name="no_cafes">You have not added any cafe yet, to add one use the button above.</string>
    <string name="no_matches">No matches</string>
    <string name="couldnt_find_cafe">Couldn\'t find any cafe with that ID.</string>
    <string name="qr_code">QR code</string>
    <string name="scan_to_add">Scan this QR to add %1$s to your cafes</string>
    <string name="already_added_cafe">That cafe was already added</string>
    <string name="cafe_removed">Cafe removed successfully</string>
    <string name="cafe_added">Cafe added successfully</string>
    <string name="welcome_to_cafe">Welcome to %1$s!</string>
    <string name="change_cafe">Change cafe</string>
    <string name="cafes_posts">%1$s\'s posts</string>
    <string name="balance" translatable="false">%1$dcg</string>
    <string name="no_posts">This cafe has not submitted any posts yet.</string>
    <string name="no_computers">This cafe has no computers, come back later.</string>
    <string name="add_method">Add method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="card_holder">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="cvv" translatable="false">CVV</string>
    <string name="add_card">Add card</string>
    <string name="no_methods">You have not added any payment methods yet.</string>
    <string name="credit_card">%1$s ending with %2$s</string>
    <string name="unknown_card">Unknown card</string>
    <string name="qr_scanned">QR code scanned</string>
    <string name="cybergold" translatable="false">Cybergold</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="real_price">You will pay %1$s for this purchase.</string>
    <string name="cafe_confirmation">You are buying cybergold for %1$s</string>
    <string name="business_id" translatable="false">ID</string>
    <string name="add_cafe_confirmation">Do you really want to add this cafe?</string>
    <string name="add_manually">Add ID manually</string>
    <string name="input_10">Input a 10 character ID.</string>
    <string name="close">Close</string>
    <string name="computers">Computers</string>
    <string name="home">Home</string>
</resources>